# laser-gaze

./: .gitignore  .gitmodules  LICENSE  README-Docker.md  README.md  setup_pi.sh
docker/: dockerfile  notes.txt
docker-iron/: docker-compose.yml  dockerfile  notes.txt
docker-noetic/: docker-compose.yml  dockerfile  notes.txt
geeks_ws/src/flatness_calculator_pkg/: setup.py
my_py_pkg/: setup.py
my_py_pkg/my_py_pkg/: pub.py  sub.py
ros1_ws/src/laser_gaze/: CMakeLists.txt  package.xml
ros1_ws/src/laser_gaze/launch/: laser_gaze.launch  visualization.launch
ros1_ws/src/laser_gaze/rviz_cfg/: cluster_cfg.rviz
ros1_ws/src/pcl_to_audio/: CMakeLists.txt  package.xml
ros1_ws/src/pcl_to_audio/config/: audio_cfg.yaml
ros1_ws/src/pcl_to_audio/src/: pcl_to_audio_node.cpp
ros1_ws/src/play_beep/: CMakeLists.txt  package.xml
ros1_ws/src/play_beep/src/: play_beep_node.cpp
ros1_ws/src/play_beep_better/: CMakeLists.txt  package.xml
ros1_ws/src/play_beep_better/src/: play_beep_better_node.cpp
ros1_ws/src/point_cloud_filter/: CMakeLists.txt  package.xml
ros1_ws/src/point_cloud_filter/config/: cluster_filter_cfg.yaml  flatness_filter_cfg.yaml
ros1_ws/src/point_cloud_filter/src/: point_cloud_filter_node.cpp
ros1_ws/src/point_cloud_filter_angled/: CMakeLists.txt  package.xml
ros1_ws/src/point_cloud_filter_angled/config/: cluster_filter_cfg.yaml  flatness_filter_cfg.yaml
ros1_ws/src/point_cloud_filter_angled/src/: point_cloud_filter_angled_node.cpp
ros1_ws/src/point_cloud_flatness_calculator/: CMakeLists.txt  package.xml
ros1_ws/src/point_cloud_flatness_calculator/src/: point_cloud_flatness_calculator.cpp
ros1_ws/src/point_cloud_object_identifier/: CMakeLists.txt  package.xml
ros1_ws/src/point_cloud_object_identifier/config/: cluster_extraction_cfg.yaml
ros1_ws/src/point_cloud_object_identifier/src/: point_cloud_object_identifier.cpp
ros1_ws/src/wav_player/: CMakeLists.txt  package.xml
ros1_ws/src/wav_player/src/: wav_player.cpp
ros2_ws/src/flatness_calculator_pkg/: package.xml  setup.cfg
ros2_ws/src/segmenter_pkg/: setup.py
ros2_ws/src/segmenter_pkg/segmenter_pkg/: segmenter_node.py
src/flatness_calculator_pkg/flatness_calculator_pkg/: flatness_calculator_node.py
src/segmenter_pkg/: package.xml  setup.cfg
