<?xml version="1.0"?>
<package format="2">
  <name>pcl_to_audio</name>
  <version>0.0.1</version>
  <description>The pcl_to_audio package</description>
  <maintainer email="wmp3.99@gmail.com">William Peyton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
  </export>
</package>