<?xml version="1.0"?>
<package format="2">
  <name>play_beep</name>
  <version>0.0.1</version>
  <description>The play_beep package</description>
  <maintainer email="wmp3.99@gmail.com">William Peyton</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
  </export>
</package>
